# omnisec-v-0.1

./: .dockerignore  .gitignore  Cargo.toml  README.md  RELEASE.md  VERSION_AUDIT.md  package-lock.json
.github/workflows/: certification.yml  ci.yml  daemon-build.yml  docker-publish.yml  release.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: main.rs
apps/dashboard/: Dockerfile  package-lock.json  package.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/app/enforcement/: page.tsx
apps/dashboard/app/reliability/: page.tsx
apps/dashboard/app/security/: page.tsx
apps/dashboard/app/validation/: page.tsx
apps/install-site/: index.html
crates/alerts/: Cargo.toml
crates/alerts/src/: lib.rs
crates/anomaly/: Cargo.toml
crates/anomaly/src/: lib.rs
crates/chaos/: Cargo.toml  Dockerfile
crates/chaos/src/: agent.rs  lib.rs
crates/chaos/src/metrics/: mod.rs
crates/chaos/src/scenarios/: mod.rs  process.rs  restart.rs
crates/decision/: Cargo.toml
crates/decision/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/ebpf/: Cargo.toml  build.rs
crates/ebpf-bpf/: Cargo.toml
crates/ebpf-bpf/src/: lib.rs
crates/ebpf-common/: Cargo.toml
crates/ebpf-common/src/: lib.rs
crates/ebpf/src/: lib.rs
crates/enforcement/: Cargo.toml
crates/enforcement/src/: lib.rs
crates/enforcement/tests/: chaos.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: cost.rs  lib.rs  recommendation.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: agent.rs  alert.rs  event.rs  lib.rs  organization.rs  policy.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/reliability/: Cargo.toml
crates/reliability/src/: activity.rs  cpu.rs  dependency.rs  fd.rs  incident.rs  lib.rs  memory.rs  metrics.rs  policy.rs  tests.rs  thread.rs
crates/restart/: Cargo.toml
crates/restart/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: audit.rs  file_monitor.rs  lib.rs  network.rs  process.rs  recovery.rs  resource.rs  systemd.rs
crates/runtime/tests/: chaos.rs
crates/security/: Cargo.toml
crates/security/src/: correlation.rs  lib.rs
crates/security/tests/: chaos.rs
crates/sensor/: Cargo.toml
crates/sensor/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial.sql  002_security.sql  003_enforcement.sql  004_runtime.sql  005_intelligence.sql  006_reliability_events.sql  007_agent_confidence.sql
crates/storage/src/: lib.rs  security.rs
crates/systemd/: Cargo.toml
crates/systemd/src/: lib.rs
deploy/: Dockerfile.all-in-one  entrypoint.sh  install.sh  omnisec-daemon.service  omnisec.env  supervisord.conf
deploy/launchd/: com.omnisec.api.plist  com.omnisec.daemon.plist  com.omnisec.dashboard.plist  com.omnisec.nats.plist  com.omnisec.postgres.plist
deploy/libexec/: omnisec-api-run  omnisec-daemon-run  omnisec-dashboard-run  omnisec-env.sh  omnisec-nats-run  omnisec-postgres-run
deploy/systemd/: omnisec-api.service  omnisec-daemon.service  omnisec-dashboard.service  omnisec-nats.service  omnisec-postgres.service  omnisec.target
docs/: EBPF_DEPLOYMENT.md  KERNEL_REQUIREMENTS.md
infra/docker/: docker-compose.yml
services/daemon/: Cargo.toml  Dockerfile
services/daemon/src/: main.rs
services/daemon/src/platform/: mod.rs
services/daemon/src/platform/linux/: files.rs  mod.rs  network.rs  process.rs  service.rs
services/daemon/src/platform/macos/: files.rs  mod.rs  network.rs  process.rs  service.rs
services/doctor/: Cargo.toml
services/doctor/src/: main.rs
services/policy-engine/: Cargo.toml  Dockerfile
services/policy-engine/src/: main.rs
services/proxy/: Cargo.toml  Dockerfile
services/proxy/src/: cache.rs  cost.rs  main.rs
services/support-bundle/: Cargo.toml
services/support-bundle/src/: main.rs
tests/certification/: install_nats_cli.sh  run_certification.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: client.rs  harness.rs  lib.rs
tests/e2e/tests/: architecture_review.rs  beta_audit.rs  false_positive.rs  final_audit.rs  performance.rs  pmf.rs  red_team.rs  reliability.rs  runtime_control.rs  security.rs
tests/integration/: Cargo.toml  docker-compose.test.yml
tests/integration/src/: lib.rs
tests/integration/tests/: control_loop.rs  scenarios.rs
~/Desktop/omnisec-version-0.1/: environment_report.md
