[package]
name = "omnisec-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnisec-api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http.workspace = true
http.workspace = true
chrono.workspace = true
omnisec-discovery = { path = "../../crates/discovery" }
omnisec-storage = { path = "../../crates/storage" }
omnisec-security = { path = "../../crates/security" }
omnisec-fingerprint = { path = "../../crates/fingerprint" }
omnisec-anomaly = { path = "../../crates/anomaly" }
omnisec-decision = { path = "../../crates/decision" }
omnisec-enforcement = { path = "../../crates/enforcement" }
omnisec-runtime = { path = "../../crates/runtime" }
omnisec-intelligence = { path = "../../crates/intelligence" }
uuid.workspace = true
