[package]
name = "omnisec-chaos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chaos-agent"
path = "src/agent.rs"

[dependencies]
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
