[package]
name = "omnisec-ebpf-bpf"
version.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf = "0.1"
omnisec-ebpf-common = { path = "../ebpf-common" }

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
