[package]
name = "omnisec-enforcement"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
omnisec-events.workspace = true
omnisec-decision.workspace = true
