[package]
name = "omnisec-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
omnisec-events.workspace = true
omnisec-decision.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
