[package]
name = "omnisec-doctor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnisec-doctor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
