[package]
name = "omnisec-policy-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnisec-policy-engine"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http.workspace = true
http.workspace = true
