[package]
name = "omnisec-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnisec-proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
hyper-util = { version = "0.1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
redis = { version = "0.25", features = ["tokio-comp"] }
sha2 = "0.10"
hex = "0.4"
http-body-util = "0.1"
bytes = "1"
chrono.workspace = true
uuid.workspace = true
